log
Thu 28 Sep 2023 03:31:08 PM UTC: 
 tests:  0|4
total_score: 0/70
143a116
Thu 28 Sep 2023 04:01:05 PM UTC: 
 heap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
heap.c:41:68: error: ‘*newHeap.capac’ may be used uninitialized [-Werror=maybe-uninitialized]
   41 |   newHeap->heapArray = (heapElem*)malloc(sizeof(heapElem) * newHeap->capac);
      |                                                             ~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d243153
Thu 28 Sep 2023 04:01:23 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:68: error: ‘*newHeap.capac’ may be used uninitialized [-Werror=maybe-uninitialized]
   41 |   newHeap->heapArray = (heapElem*)malloc(sizeof(heapElem) * newHeap->capac);
      |                                                             ~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6bfef12
Thu 28 Sep 2023 04:02:37 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 0/70
30528a2
Thu 28 Sep 2023 04:03:23 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 0/70
1fb810b
Thu 28 Sep 2023 04:20:39 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
c69719b
